fixed spacing issues between imgs and header and first section

--- a/style.css
+++ b/style.css
@@ -6,25 +6,31 @@
 }
  header {
    background-color: white;
-   margin-top: 7px;
-   padding-top: 5px;
-   padding-bottom: 5px;
+   margin-top: 15px;
+   padding-top: 1px;
+   padding-bottom: 20px;
  }
 h1, .tagline {
   text-align: center;
 }
 
+ p{
+   margin-top: -10px;
+ }
+
 body {
   font-family: 'Open Sans', Arial, sans-serif;
-  background-color: #f9f7f5;
-  margin-left: 100px;
-  margin-right: 100px;
+  background-color: #F9F7F5;
+  margin-left: 75px;
+  margin-right: 75px;
+  padding-left: 10px;
+  margin-bottom: 50px;
 }
 
 img {
   height: 50px;
   max-width: 50px;
-  margin-right: 5px;
+  margin-right: 15px;
 }
 
 h2 {
@@ -33,17 +39,20 @@ h2 {
   font-size: 20px;
   padding-top: 20px;
   padding-bottom: 10px;
-  border-bottom: 2px solid orange;
+  border-bottom: 2px solid #DC9C5E;
+  margin-right:30px;
 }
 
 section {
   background-color: white;
-  padding-left: 20px;
+  padding-left: 30px;
   padding-bottom: 50px;
+  margin-bottom: 50px;
+  margin-top: -20px;
 }
 
-
 span {
+  margin-left: 20px;
   font-size: 10px;
 }
 
@@ -55,6 +64,15 @@ a:hover {
   color: orange;
 }
 
+html{
+ height: 100%;
+ width: 100%;
+}
+
+body{
+ width: 100%;
+ height: 100%;
+}
 div {
 width: 75%;
 height: 75%;
